@@ -116,5 +116,7 @@ Optional packages include:
    reiser4progs
    reiserfsprogs
    xfsprogs
-   NOTE:  If the vol_id command is in the search PATH, it will be
-          used to read linux-swap, hfs, and hfs+ file system volume labels.
+
+   NOTE:  If the vol_id command is in the search PATH, it will be used
+          to read linux-swap, reiser4, hfs, and hfs+ file system
+          volume labels.
