@@ -1,5 +1,8 @@
 2008-10-31  Curtis Gedak  <gedakc@gmail.com>
 
+	* src/reiser4.cc,
+	  README: Changed get_label() to use vol_id instead of debugfs.reiser4
+
 	* src/GParted_Core.cc: Changed thread status messages to be unique
 
 2008-10-30  Curtis Gedak  <gedakc@gmail.com>
